--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           AZURE_DEVOPS_TOKEN: ${{ secrets.AZURE_DEVOPS_TOKEN }}
         shell: pwsh
         run: |
-          dotnet nuget add source --username "${{ env.USERNAME }}" --password "${{ env.AZURE_DEVOPS_TOKEN }}" --store-password-in-clear-text --name HalcyonSoft "https://pkgs.dev.azure.com/HalcyonSoft/Software/_packaging/HalcyonSoft/nuget/v3/index.json"
+          dotnet nuget add source --username "${{ env.USERNAME }}" --password "${{ env.NUGET_TOKEN }}" --store-password-in-clear-text --name HalcyonSoft "https://nuget.pkg.github.com/Aaronkarr11/index.json"
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet build --configuration Release --output ./output
           popd
