--- a/.github/workflows/main_halcyontransactions.yml
+++ b/.github/workflows/main_halcyontransactions.yml
@@ -27,8 +27,12 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: 'Resolve Project Dependencies Using Dotnet'
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          AZURE_DEVOPS_TOKEN: ${{ secrets.AZURE_DEVOPS_TOKEN }}
         shell: pwsh
         run: |
+          dotnet nuget add source --username "Aaronkarr11" --password "${{ secrets.NUGET_TOKEN }}" --store-password-in-clear-text --name github "https://nuget.pkg.github.com/Aaronkarr11/index.json"
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           dotnet build --configuration Release --output ./output
           popd
