--- a/HalcyonTransactions/HalcyonTransactions.csproj
+++ b/HalcyonTransactions/HalcyonTransactions.csproj
@@ -8,6 +8,9 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Content Include="local.settings.json" />
+	</ItemGroup>
+	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker" Version="1.22.0" />
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.17.4" />
@@ -16,7 +19,7 @@
 		<PackageReference Include="Microsoft.Azure.Functions.Worker.ApplicationInsights" Version="1.2.0" />
 		<PackageReference Include="Azure.Data.Tables" Version="12.8.3" />
 		<PackageReference Include="Azure.Identity" Version="1.12.0" />
-		<PackageReference Include="HalcyonCore" Version="1.0.0-17964718893" />
+		<PackageReference Include="HalcyonCore" Version="1.0.0-18364699981" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
